import "parser.proto";

option java_package = "com.codingstory.polaris.search";
option java_outer_classname = "SearchProtos";
option java_generic_services = true;

enum StatusCode {
    OK = 0;
    FILE_NOT_FOUND = -1001;
    MISSING_FIELDS = -1002;
    NOT_IMPLEMENTED = 1003;
    NOT_UNIQUE = -1004;
    UNKNOWN_ERROR = -1099;
}

message Hit {
    enum Kind {
        TYPE = 1;
        FILE = 2;
    }
    optional Kind kind = 8; 
    optional JumpTarget jumpTarget = 3;
    optional string summary = 4;
    optional double score = 5;
    optional ClassType classType = 6; // if kind == TYPE
    optional string queryHint = 7; // for query completion

    // OBSOLETED optional string project = 1;
    // OBSOLETED optional string path = 2;
}

message SearchRequest {
    optional string query = 1;
    optional int32 rankFrom = 2;
    optional int32 rankTo = 3;
}

message SearchResponse {
    optional StatusCode status = 1;
    repeated Hit hits = 2;
    optional int64 latency = 3;
    optional int64 count = 4;
}

message SourceRequest {
    optional int64 fileId = 1;
    optional string projectName = 2;
    optional string fileName = 3;
}

message SourceResponse {
    optional StatusCode status = 1;
    optional SourceFile source = 2;
    repeated Usage usages = 3;
}

message CompleteRequest {
    optional string query = 1;
    optional int32 limit = 2;
}

message CompleteResponse {
    optional StatusCode status = 1;
    repeated Hit hits = 4;
    optional int64 latency = 3;
    // OBSOLETED repeated string entries = 2;
}

message ListFilesRequest {
    optional string projectName = 1;
    optional string directoryName = 2;
}

message ListFilesResponse {
    optional StatusCode status = 1;
    repeated FileHandle children = 5;
    // OBSOLETED repeated string directories = 3;
    // OBSOLETED repeated FileHandle files = 4;
}

message GetTypeRequest {
    // If "typeId" is specified, "project" and "typeName" are ignored.
    optional int64 typeId = 1;
    optional string project = 2; // search in all projects if empty
    optional string typeName = 3; // full name
}

message GetTypeResponse {
    optional StatusCode status = 1;
    optional ClassType classType = 2;
}

message ListTypesInFileRequest {
    optional int64 fileId = 1;
    optional int32 limit = 2;
}

message ListTypesInFileResponse {
    optional StatusCode status = 1;
    repeated ClassType classTypes = 2;
}

message ListUsagesRequest {
    optional Usage.Kind kind = 2;
    optional int64 id = 1; // type-id, method-id or field-id
}

message ListUsagesResponse {
    optional StatusCode status = 1;
    repeated Usage usages = 2;
}

message GetFieldRequest {
    optional int64 fieldId = 1;
}

message GetFieldResponse {
    optional StatusCode status = 1;
    optional Variable field = 2;
}

message GetMethodRequest {
    optional int64 methodId = 1;
}

message GetMethodResponse {
    optional StatusCode status = 1;
    optional Method method = 2;
}

message GetFileHandleRequest {
    optional string project = 1;
    optional string path = 2;
}

message GetFileHandleResponse {
    optional StatusCode status = 1;
    optional FileHandle fileHandle = 2;
}

service CodeSearch {
    rpc search(SearchRequest) returns (SearchResponse);
    rpc source(SourceRequest) returns (SourceResponse);
    rpc complete(CompleteRequest) returns (CompleteResponse);
    rpc listFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc getType(GetTypeRequest) returns (GetTypeResponse);
    rpc listTypesInFile(ListTypesInFileRequest) returns (ListTypesInFileResponse);
    rpc listUsages(ListUsagesRequest) returns (ListUsagesResponse);
    rpc getField(GetFieldRequest) returns (GetFieldResponse);
    rpc getMethod(GetMethodRequest) returns (GetMethodResponse);
    rpc getFileHandle(GetFileHandleRequest) returns (GetFileHandleResponse);
}
